--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.2",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0",
     "react-icons": "^5.0.1",
     "sass": "^1.70.0",
-    "swiper": "^11.0.5",
-    "bootstrap": "^5.3.2"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
